Fix invisible CTA in landing.

--- a/public/app/css/_landing.sass
+++ b/public/app/css/_landing.sass
@@ -6,18 +6,15 @@
   overflow: hidden
   position: relative
   background: #000000
-  /* fallback for old browsers
   background: -webkit-linear-gradient(to left, #000000, #53346D)
-  /* Chrome 10-25, Safari 5.1-6
   background: linear-gradient(to left, #000000, #53346D)
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+
+
   .landing-screenshot
+    display: block
+    margin: 50px auto 0 auto
     max-width: 720px
     box-shadow: 0 0 30px rgba(0, 0, 0, 0.5)
-    position: absolute
-    bottom: -150px
-    left: 50%
-    margin-left: -360px
+    position: relative
     z-index: 1000
 
 .hero-description
